--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "REST API using Node.js and Express",
   "main": "server.js",
   "dependencies": {
-    "express": "~3.2.4"
+    "express": "~3.2.4",
+    "xml2js" : "~0.4.16"
   }
 }
